[project]
name = "napari-volpy"
version = "0.1.0"
description = "A Napari plugin for VolPy voltage imaging analysis"
readme = "README.md"
requires-python = ">=3.9, <3.10"  # CaImAn 更稳定支持 3.9
license = {file = "LICENSE"}
authors = [
    {name = "bbbyzantium", email = "zpd418838434@gmail.com"},
]
dependencies = [
    "napari>=0.4.19",
    "caiman>=1.9.10",
    "magicgui>=0.8.0",
    "qtpy>=2.4.0",
    "tifffile>=2023.0.0",
    "h5py>=3.10.0",
    "numpy>=1.23.0"
]
classifiers = [
    "Framework :: napari",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies]
testing = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-qt>=4.2",
]
dev = [
    "pre-commit",
    "tox",
]

[tool.hatch.build.targets.wheel]
packages = ["src/napari_volpy"]

[project.entry-points."napari.manifest"]
napari-volpy = "napari_volpy:napari.yaml"
